gap fixed

--- a/portfolio.css
+++ b/portfolio.css
@@ -3,10 +3,11 @@
 body {
 	background-color: #2d2d2d;
 	font-family: "Source Code Pro";
+	margin: 30px 0px 0px 0px;
 }
 
 div.center {
-	padding: 10px;
+	padding: 0px;
 }
 
 h1 {
